--- a/templates/account/verification_sent.html
+++ b/templates/account/verification_sent.html
@@ -51,7 +51,7 @@
 			    <h4>{% trans "Vérifier votre adresse e-mail" %}</h4>
 
 			    <p>{% blocktrans %}
-			    	Pour activer votre compte, nous vous prions de cliquer sur le lien que nous venons de vous envoyer à votre adresse e-mail. 
+			    	Pour activer votre compte, nous vous prions de cliquer sur le lien que nous venons de vous envoyer par mail. 
 			    </p>
 			    
 			    <p>Consultez votre dossier de spams pour vérifier que le message envoyé ne s'y trouve pas. 
