--- a/templates/django_social_share/templatetags/post_to_twitter.html
+++ b/templates/django_social_share/templatetags/post_to_twitter.html
@@ -1,2 +1,2 @@
-<a class="btn tw-bg waves-effect waves-light" href="{{ tweet_url }}">
+<a class="btn tw-bg waves-effect waves-light" href="{{ tweet_url }}" title="Partager sur twitter">
 <i class="fa fa-twitter left"></i><span class="hidden-xs">  | Tweet on Twitter</span></a>
