--- a/templates/base_admin.html
+++ b/templates/base_admin.html
@@ -170,6 +170,10 @@
                     <li>
                         <a href="javascript:;" data-toggle="collapse" data-target="#video"><i class="fa fa-video-camera" aria-hidden="true"></i> Videos<i class="fa fa-fw fa-caret-down"></i></a>
                         <ul id="video" class="list-unstyled collapse">
+                             <li>
+
+                                <a href="{% url 'video_new_categ' %}">{% trans 'Catégorie' %}</a>
+                            </li>
                             <li>
                                 <a href="{% url 'video_new' %}">{% trans 'Ajouter' %}</a>
                             </li>
