--- a/templates/blog/post_list.html
+++ b/templates/blog/post_list.html
@@ -80,7 +80,12 @@
 			         <!--        <li>
 			              		
 			                    By <a href="" class="rp-author">Admin</a></li>  --> 
-			                <li><i class="fa fa-calendar" aria-hidden="true"></i> {{ post.published_at|date:'F j, Y' }} </li> 
+                            <li>{% if post.author.is_staff_member %}
+                               <img src="{% static 'assets/images/tk-icon.png' %}" class="img-circle" style="background-color: #000; width: 20px; height: 20px;" alt="">  By <a href="#" class="rp-author">{% trans 'L équipe' %}</a> 
+                            {% else %}
+                            By <a href="" class="rp-author">{% trans 'L équipe' %}</a>
+                            {% endif %}</li>
+			                <li><i class="fa fa-calendar" aria-hidden="true"></i> {% language 'fr' %}{{ post.published_at|date:'d M Y ' }} {% endlanguage %} </li> 
 			                
 			                <li><i class="fa fa-eye cook-second-color" aria-hidden="true"></i>{{post.view}}</li>
 
