--- a/templates/django_social_share/templatetags/post_to_gplus.html
+++ b/templates/django_social_share/templatetags/post_to_gplus.html
@@ -1,1 +1,1 @@
- <a class="btn gplus-bg waves-effect waves-light" href="{{gplus_url}}"><i class="fa fa-google-plus"></i></a>
+ <a class="btn gplus-bg waves-effect waves-light" href="{{gplus_url}}" title="Partager sur Google Plus"><i class="fa fa-google-plus"></i></a>
