--- a/templates/recipe/modals.html
+++ b/templates/recipe/modals.html
@@ -28,22 +28,22 @@
                             <ul class="social-link list-inline">
                                  <li>
                                     {% if recipe.author.profile.facebook %}
-                                    <a href="{{recipe.author.profile.facebook}}" class="btn-floating facebook"><i class="fa fa-facebook"></i></a>
+                                    <a href="{{recipe.author.profile.facebook}}" target="blank" class="btn-floating facebook"><i class="fa fa-facebook"></i></a>
                                     {% else %}
-                                     <a href="#" class="btn-floating facebook"><i class="fa fa-facebook"></i></a>
+                                     <a href="#" class="btn-floating facebook" ><i class="fa fa-facebook"></i></a>
                                     {% endif %}
                                 </li>
                                 <li>
                                     {% if recipe.author.profile.twitter %}
 
-                                    <a href="{{recipe.author.profile.twitter}}" class="btn-floating twitter"><i class="fa fa-twitter"></i></a>
+                                    <a href="{{recipe.author.profile.twitter}}" target="blank" class="btn-floating twitter"><i class="fa fa-twitter"></i></a>
                                     {% else %}
                                     <a href="#" class="btn-floating twitter"><i class="fa fa-twitter"></i></a>
                                     {% endif %}
                                 </li>
                                 <li>
                                     {% if recipe.author.profile.gplus %}
-                                    <a href="{{recipe.author.profile.gplus}}" class="btn-floating gplus"><i class="fa fa-google-plus"></i></a>
+                                    <a href="{{recipe.author.profile.gplus}}" target="blank" class="btn-floating gplus"><i class="fa fa-google-plus"></i></a>
                                     {% else %}
                                      <a href="#" class="btn-floating gplus"><i class="fa fa-google-plus"></i></a>
                                     {% endif %}
@@ -51,7 +51,7 @@
                                 <li>
                                     {% if recipe.author.profile.instagram %}
 
-                                    <a href="{{recipe.author.profile.instagram}}" class="btn-floating insta"><i class="fa fa-instagram"></i></a>
+                                    <a href="{{recipe.author.profile.instagram}}" target="blank" class="btn-floating insta"><i class="fa fa-instagram"></i></a>
                                     {% else %}
                                     <a href="#" class="btn-floating insta"><i class="fa fa-instagram"></i></a>
                                     {% endif %}
@@ -59,7 +59,7 @@
                                 </li>
                                 <li>
                                     {% if recipe.author.profile.linkedin %}
-                                    <a href="{{recipe.author.profile.linkedin}}" class="btn-floating linkedin"><i class="fa fa-linkedin"></i></a>
+                                    <a href="{{recipe.author.profile.linkedin}}" target="blank" class="btn-floating linkedin"><i class="fa fa-linkedin"></i></a>
                                     {% else %}
                                     <a href="#" class="btn-floating likedin"><i class="fa fa-linkedin"></i></a>
                                     {% endif %}
